# frost

./: .gitignore  .mergify.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  LICENCE.MIT  LICENSE.Apache-2.0  README.md  codecov.yml  gendoc.py  performance.md  plot.py  rustfmt.toml
frost-core/: CHANGELOG.md  Cargo.toml  README.md
frost-core/src/: batch.rs  benches.rs  error.rs  frost.rs  identifier.rs  keys.rs  lib.rs  round1.rs  round2.rs  scalar_mul.rs  serialization.rs  signature.rs  signing_key.rs  tests.rs  traits.rs  util.rs  verifying_key.rs
frost-core/src/frost/: identifier.rs  keys.rs  round1.rs  round2.rs
frost-core/src/keys/: cocktail_dkg.rs  dkg.rs  refresh.rs  repairable.rs  resharing.rs
frost-core/src/tests/: batch.rs  ciphersuite_generic.rs  cocktail_dkg.rs  coefficient_commitment.rs  helpers.rs  proptests.rs  recreations.rs  refresh.rs  repairable.rs  resharing.rs  samples.rs  vectors.rs  vectors_dkg.rs  vss_commitment.rs
frost-core/tests/: batch.rs  batch.rs.bck  ciphersuite.rs  frost.rs  frost.rs.bck  proptests.rs  test.rs  tests.rs  vectors.rs
frost-core/tests/common/: ciphersuite.rs  mod.rs  vectors.json  vectors.rs
frost-ed25519/: Cargo.toml  README.md  dkg.md  tests.rs
frost-ed25519/benches/: bench.rs
frost-ed25519/src/: helpers.rs  lib.rs  rerandomized.rs  tests.rs
frost-ed25519/src/keys/: cocktail_dkg.rs  dkg.rs  refresh.rs  repairable.rs
frost-ed25519/src/tests/: batch.rs  batch_tests.rs  ciphersuite_generic.rs  ciphersuite_generic_tests.rs  coefficient_commitment.rs  coefficient_commitment_tests.rs  deserialize.rs  proptests.rs  signing_tests.rs  vss_commitment.rs  vss_commitment_tests.rs
frost-ed25519/tests/: cocktail_dkg_tests.rs  common_traits_tests.rs  deserialize.rs  elements.json  frost.rs  integration_test.rs  integration_tests.rs  interoperability_tests.rs  proptests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
frost-ed25519/tests/helpers/: cocktail-dkg-ed25519-sha512.json  mod.rs  samples.json  samples.rs  vectors-big-identifier.json  vectors.json  vectors_dkg.json
frost-ed25519/tests/snapshots/: serialization_tests__check_key_package_postcard_serialization.snap  serialization_tests__check_public_key_package_new_postcard_serialization.snap  serialization_tests__check_public_key_package_postcard_serialization.snap  serialization_tests__check_round1_package_postcard_serialization.snap  serialization_tests__check_round1_secret_package_postcard_serialization.snap  serialization_tests__check_round2_package_postcard_serialization.snap  serialization_tests__check_round2_secret_package_postcard_serialization.snap  serialization_tests__check_secret_share_postcard_serialization.snap  serialization_tests__check_signature_share_postcard_serialization.snap  serialization_tests__check_signing_commitments_postcard_serialization.snap  serialization_tests__check_signing_nonces_postcard_serialization.snap  serialization_tests__check_signing_package_postcard_serialization.snap
frost-ed448/: Cargo.toml  README.md  dkg.md
frost-ed448/benches/: bench.rs
frost-ed448/src/: lib.rs  rerandomized.rs  tests.rs
frost-ed448/src/keys/: dkg.rs  repairable.rs
frost-ed448/src/tests/: batch.rs  ciphersuite_generic.rs  ciphersuite_generic_tests.rs  coefficient_commitment.rs  coefficient_commitment_tests.rs  deserialize.rs  proptests.rs  signing_tests.rs  vectors-big-identifier.json  vss_commitment.rs  vss_commitment_tests.rs
frost-ed448/tests/: cocktail_dkg_tests.rs  common_traits_tests.rs  deserialize.rs  elements.json  frost.rs  integration_tests.rs  proptests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
frost-ed448/tests/helpers/: cocktail-dkg-ed448-shake256.json  samples.json  samples.rs  vectors-big-identifier.json  vectors.json  vectors_dkg.json
frost-ed448/tests/snapshots/: serialization_tests__check_key_package_postcard_serialization.snap  (+11 more)
frost-p256/: Cargo.toml  README.md  dkg.md
frost-p256/benches/: bench.rs
frost-p256/src/: lib.rs  rerandomized.rs  tests.rs
frost-p256/tests/: cocktail_dkg_tests.rs  common_traits_tests.rs  deserialize.rs  elements.json  frost.rs  integration_tests.rs  proptests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
frost-redjubjub/: Cargo.toml  README.md  dkg.md
frost-redjubjub/src/: batch.rs  constants.rs  frost.rs  hash.rs  lib.rs  messages.rs
frost-redjubjub/tests/: librustzcash_vectors.rs
frost-rerandomized/: CHANGELOG.md  Cargo.toml  README.md
frost-rerandomized/src/: lib.rs  tests.rs
frost-ristretto255/: Cargo.toml  README.md  dkg.md  tests.rs
frost-ristretto255/benches/: bench.rs
frost-ristretto255/src/: batch.rs  frost.rs  lib.rs  messages.rs  rerandomized.rs  signature.rs  signing_key.rs  tests.rs  verification_key.rs
frost-ristretto255/tests/: batch.rs  bincode.rs  cocktail_dkg_tests.rs  common_traits_tests.rs  deserialize.rs  elements.json  frost.rs  integration_tests.rs  proptests.rs  recreation_tests.rs  repair-share.json  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs  smallorder.rs  vectors.rs
frost-secp256k1/: Cargo.toml  README.md  dkg.md
frost-secp256k1-tr/: CHANGELOG.md  Cargo.toml  README.md  dkg.md
frost-secp256k1-tr/benches/: bench.rs
frost-secp256k1-tr/src/: lib.rs  rerandomized.rs  tests.rs
frost-secp256k1-tr/tests/: cocktail_dkg_tests.rs  common_traits_tests.rs  integration_tests.rs  interoperability_tests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs  tweaking_tests.rs
frost-secp256k1/benches/: bench.rs
frost-secp256k1/src/: lib.rs  rerandomized.rs  tests.rs
frost-secp256k1/tests/: common_traits_tests.rs  deserialize.rs  elements.json  frost.rs  integration_tests.rs  proptests.rs  recreation_tests.rs  repair-share.json  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
gencode/: Cargo.toml
gencode/src/: main.rs
gendoc/: Cargo.toml
gendoc/src/: main.rs
tss/: Cargo.toml
tss/src/: dkg.rs  lib.rs  roast.rs  rts.rs  tests.rs
(+324 files in other folders)
