[workspace]
resolver = "2"
members = [
    "frost-core",
    "frost-ed25519",
    "frost-ed448",
    "frost-p256",
    "frost-ristretto255",
    "frost-secp256k1",
    "frost-secp256k1-tr",
    "frost-rerandomized",
    "gencode"
]

[workspace.package]
edition = "2021"
version = "2.1.0"
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>",
    "Natalie Eskinazi <natalie@znfd.org>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/frost"
categories = ["cryptography"]

[workspace.dependencies]
criterion = "0.5"
document-features = "0.2.7"
hex = { version  = "0.4.3", default-features = false, features = ["alloc"] }
insta = { version = "1.31.0", features = ["yaml"] }
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde_json = "1.0"

frost-core = { path = "frost-core", version = "2.1.0", default-features = false }
frost-rerandomized = { path = "frost-rerandomized", version = "2.1.0", default-features = false }
byteorder = { version = "1.4", default-features = false }
const-crc32 = "1.2.0"
curve25519-dalek = "=4.1.3"
debugless-unwrap = "0.0.4"
derive-getters = "0.5.0"
ed25519-dalek = "2.1.0"
ed448-goldilocks = "0.9.0"
itertools = { version = "0.14.0", default-features = false }
k256 = { version = "0.13.0", default-features = false }
p256 = { version = "0.13.0", default-features = false }
postcard = "1.0.0"
regex = "1.6.0"
secp256k1 = "0.30.0"
serde = { version = "1.0.160", default-features = false }
serdect = "0.2.0"
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
thiserror-nostd-notrait = { version = "1.0.29", default-features = false }
visibility = "0.1.0"
zeroize = { version = "1.5.4", default-features = false }

[profile.test.package."*"]
opt-level = 3
