[workspace]
resolver = "3"
members = [
    "frost-core",
    "frost-ed25519",
    "frost-ed448",
    "frost-p256",
    "frost-ristretto255",
    "frost-secp256k1",
    "frost-secp256k1-tr",
    "frost-rerandomized",
    "gencode"
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "2.2.0"
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>",
    "Natalie Eskinazi <natalie@znfd.org>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/frost"
categories = ["cryptography"]

[workspace.dependencies]
criterion = "0.6"
document-features = "0.2.7"
hex = { version  = "0.4.3", default-features = false, features = ["alloc"] }
insta = { version = "1.31.0", features = ["yaml"] }
lazy_static = "1.4"
proptest = "1.0"
rand = "0.9"
rand_chacha = "0.9"
rand_core = "0.9"
serde_json = "1.0"

frost-core = { path = "frost-core", version = "2.2.0", default-features = false }
frost-rerandomized = { path = "frost-rerandomized", version = "2.2.0", default-features = false }

[profile.test.package."*"]
opt-level = 3
