[workspace]
resolver = "3"
members = [
    "frost-core",
    "frost-ed448",
    "frost-ed25519",
    "frost-p256",
    "frost-rerandomized",
    "frost-ristretto255",
    "frost-secp256k1",
    "frost-secp256k1-tr",
    "gencode",
]

[workspace.package]
version = "3.0.0"
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>",
    "Natalie Eskinazi <natalie@znfd.org>"
]
# If you update the edition, make sure to also update the argument to rustfmt
# in gencode/src/main.rs.
edition = "2024"
rust-version = "1.86"
description = "ZF FROST (Flexible Round-Optimised Schnorr Threshold signatures)"
documentation = "https://docs.rs/frost-core"
readme = "README.md"
homepage = "https://frost.zfnd.org"
repository = "https://github.com/ZcashFoundation/frost"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["cryptography", "crypto", "threshold", "signature", "schnorr"]
categories = ["cryptography", "algorithms", "mathematics", "security", "no-std"]

[workspace.dependencies]
byteorder = { version = "1.5", default-features = false }
const-crc32 = { version = "1.3", package = "const-crc32-nostd" }
criterion = "0.8"
curve25519-dalek = { version = "5.0", features = ["rand_core"] }
debugless-unwrap = "1.0"
derive-getters = "0.5"
document-features = "0.2.12"
ed448-goldilocks = { version = "0.14.0-pre.15", default-features = false }
ed25519-dalek = "3.0"
hex = { package = "const-hex", version = "1.19", default-features = false, features = ["alloc"] }
insta = { version = "1.48", features = ["yaml"] }
k256 = { version = "0.14", default-features = false, features = ["hash2curve"] }
p256 = { version = "0.14", default-features = false, features = ["hash2curve"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
proptest = "1.11"
rand = "0.10"
rand_chacha = "0.10"
rand_core = "0.10"
regex = "1.13"
secp256k1 = "0.31"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serdect = "0.2" # TODO: https://github.com/ZcashFoundation/frost/issues/830
serde_json = "1.0"
sha2 = { version = "0.11", default-features = false }
sha3 = { version = "0.12", default-features = false }
shake = { version = "0.1", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
visibility = "0.1"
zeroize = { version = "1.9", default-features = false, features = ["derive", "alloc"] }

frost-core = { version = "3.0.0", path = "frost-core", default-features = false }
frost-ed448 = { version = "3.0.0", path = "frost-ed448", default-features = false }
frost-ed25519 = { version = "3.0.0", path = "frost-ed25519", default-features = false }
frost-p256 = { version = "3.0.0", path = "frost-p256", default-features = false }
frost-rerandomized = { version = "3.0.0", path = "frost-rerandomized", default-features = false }
frost-ristretto255 = { version = "3.0.0", path = "frost-ristretto255", default-features = false }
frost-secp256k1 = { version = "3.0.0", path = "frost-secp256k1", default-features = false }
frost-secp256k1-tr = { version = "3.0.0", path = "frost-secp256k1-tr", default-features = false }
gencode = { version = "3.0.0", path = "gencode", default-features = false }

[profile.test.package."*"]
opt-level = 3
