[package]
name = "frost-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Types and traits to support implementing Flexible Round-Optimized Schnorr Threshold signature schemes (FROST)."
documentation = "https://docs.rs/frost-core"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "crypto", "threshold", "signature", "schnorr"]
categories.workspace = true

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false

[dependencies]
byteorder.workspace = true
const-crc32.workspace = true
debugless-unwrap = { workspace = true, optional = true }
derive-getters.workspace = true
document-features.workspace = true
hex.workspace = true
postcard = { workspace = true, optional = true }
rand_core.workspace = true
serde = { workspace = true, optional = true }
serdect = { workspace = true, optional = true }
thiserror.workspace = true
visibility.workspace = true
zeroize.workspace = true

# Test dependencies used with the test-impl feature
criterion = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
debugless-unwrap.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["serialization"]
#! ## Features
## Expose internal types, which do not have SemVer guarantees. This is an advanced
## feature which can be useful if you need to build a modified version of FROST.
## The docs won't list them, you will need to check the source code.
internals = []
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["dep:serde", "dep:serdect"]
serialization = ["serde", "dep:postcard"]
# Exposes ciphersuite-generic tests for other crates to use
test-impl = ["dep:proptest", "dep:serde_json", "dep:criterion", "dep:tokio", "dep:debugless-unwrap"]
