[package]
name = "frost-ed25519"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Schnorr signature scheme over Ed25519 that supports FROST."
documentation = "https://docs.rs/frost-ed25519"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "crypto", "ed25519", "threshold", "signature"]
categories.workspace = true

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
curve25519-dalek.workspace = true
document-features.workspace = true
frost-core.workspace = true
frost-rerandomized.workspace = true
rand_core.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion.workspace = true
ed25519-dalek.workspace = true
frost-core = { workspace = true, features = ["test-impl"] }
frost-rerandomized = { workspace = true, features = ["test-impl"] }
hex.workspace = true
insta.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["serialization"]
#! ## Features
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost-core/serde"]
## Enable a default serialization format. Enables `serde`.
serialization = ["serde", "frost-core/serialization", "frost-rerandomized/serialization"]
