[package]
name = "frost-p256"
edition = "2021"
# When releasing to crates.io:
# - Update html_root_url
# - Update CHANGELOG.md
# - Create git tag.
version = "0.1.0"
authors = [
        "Deirdre Connolly <durumcrustulum@gmail.com>",
        "Chelsea Komlo <me@chelseakomlo.com>",
        "Conrado Gouvea <conradoplg@gmail.com>"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/frost"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "threshold", "signature"]
description = "A Schnorr signature scheme over the NIST P-256 curve that supports FROST."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
p256 = { version = "0.11.1", features = ["hash2curve"] }
frost-core = { path = "../frost-core", features = ["test-impl"] }
rand_core = "0.6"
sha2 = "0.10.2"

[dev-dependencies]
bincode = "1"
criterion = "0.4"
ed25519-dalek = "1.0.1"
ed25519-zebra = "3.0.0"
lazy_static = "1.4"
proptest = "1.0"
proptest-derive = "0.3"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
nightly = []
default = []

# [[bench]]
# name = "bench"
# harness = false
