[package]
name = "frost-rerandomized"
edition = "2021"
# When releasing to crates.io:
# - Update html_root_url
# - Update CHANGELOG.md
# - Create git tag.
version = "2.0.0"
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/frost"
categories = ["cryptography"]
keywords = ["cryptography", "threshold", "signature", "schnorr", "randomized"]
description = "Types and traits to support implementing a re-randomized variant of Flexible Round-Optimized Schnorr Threshold signature schemes (FROST)."

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derive-getters = "0.5.0"
document-features = "0.2.7"
frost-core = { path = "../frost-core", version = "2.0.0", features = [
    "internals"
], default-features = false }
hex = { version  = "0.4.3", default-features = false, features = ["alloc"] }
rand_core = "0.6"

[dev-dependencies]

[features]
nightly = []
default = ["serialization", "cheater-detection"]
#! ## Features
## Enable standard library support.
std = ["frost-core/std"]
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost-core/serde"]
# Exposes ciphersuite-generic tests for other crates to use
test-impl = ["frost-core/test-impl", "serialization"]
## Enable cheater detection
cheater-detection = ["frost-core/cheater-detection"]
## Enable a default serialization format. Enables `serde`.
serialization = ["serde", "frost-core/serialization"]
