[package]
name = "frost-rerandomized"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Types and traits to support implementing a re-randomized variant of Flexible Round-Optimized Schnorr Threshold signature schemes (FROST)."
documentation = "https://docs.rs/frost-rerandomized"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "threshold", "signature", "schnorr", "randomized"]
categories.workspace = true

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derive-getters.workspace = true
document-features.workspace = true
frost-core = { workspace = true, features = ["internals"] }
hex.workspace = true
rand_core.workspace = true

[features]
default = ["serialization"]
#! ## Features
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost-core/serde"]
# Exposes ciphersuite-generic tests for other crates to use
test-impl = ["frost-core/test-impl", "serialization"]
## Enable a default serialization format. Enables `serde`.
serialization = ["serde", "frost-core/serialization"]
