[package]
name = "frost-ristretto255"
edition = "2021"
# When releasing to crates.io:
# - Update html_root_url
# - Update CHANGELOG.md
# - Create git tag.
version = "0.4.0"
authors = ["Deirdre Connolly <durumcrustulum@gmail.com>", "Chelsea Komlo <me@chelseakomlo.com>", "Conrado Gouvea <conradoplg@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/frost"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "threshold", "signature"]
description = "A Schnorr signature scheme over the prime-order Ristretto group that supports FROST."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
curve25519-dalek = { version = "=4.0.0-rc.2", features = ["serde", "rand_core"] }
frost-core = { path = "../frost-core", version = "0.4.0", features = ["test-impl"] }
rand_core = "0.6"
sha2 = "0.10.2"

[dev-dependencies]
bincode = "1"
criterion = { version = "0.5", features = ["html_reports"] }
ed25519-dalek = "1.0.1"
ed25519-zebra = "4.0.0"
hex = "0.4.3"
lazy_static = "1.4"
proptest = "1.0"
proptest-derive = "0.3"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
nightly = []
default = []
serde = ["frost-core/serde"]

[lib]
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false

[[bench]]
name = "bench"
harness = false
